--- a/package.json
+++ b/package.json
@@ -5,11 +5,17 @@
   "dependencies": {
     "@material-ui/core": "^3.3.1",
     "@material-ui/icons": "^3.0.1",
+    "epoch-charting": "^0.8.4",
+    "plotly.js": "^1.45.3",
+    "plotly.js-dist": "^1.45.3",
     "react": "^16.6.0",
     "react-dom": "^16.6.0",
+    "react-map-gl": "^4.1.1",
+    "react-plotly.js": "^2.3.0",
     "react-redux": "^5.0.7",
-    "react-scripts": "2.0.5",
+    "react-scripts": "^2.1.8",
     "react-toastify": "^4.4.0",
+    "recharts": "^1.5.0",
     "redux": "^4.0.1",
     "redux-saga": "^0.16.2"
   },
